updated navigation links

--- a/about.html
+++ b/about.html
@@ -347,7 +347,7 @@
 
     <!-- About Us Section -->
     <section class="about-us-section">
-        <div class="container">
+        <div class="about-container">
             <div class="about-us-content">
                 <div class="about-us-text">
                     <h4 class="about-us-section-label">About us</h4>
