--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
           <h4>Customer Service</h4>
           <ul>
             <li><a href="/about.html">About Us</a></li>
-            <li><a href="#">MARKETING SUPPORT</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="/marketing-support.html">MARKETING SUPPORT</a></li>
+            <li><a href="/contact-us.html">Contact Us</a></li>
             <li><a href="/quality-assurance.html">Quality Assurance</a></li>
           </ul>
         </div>
