--- a/product-subcategory.html
+++ b/product-subcategory.html
@@ -355,7 +355,7 @@
 
     <!-- Products Section -->
     <section class="products-section">
-        <div class="products-container">
+        <div class="products-subcategory-container">
             <!-- Sidebar -->
             <aside class="sidebar">
                 <div class="sidebar-header">
@@ -553,8 +553,8 @@
           <h4>Customer Service</h4>
           <ul>
             <li><a href="/about.html">About Us</a></li>
-            <li><a href="#">MARKETING SUPPORT</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="/marketing-support.html">MARKETING SUPPORT</a></li>
+            <li><a href="/contact-us.html">Contact Us</a></li>
             <li><a href="/quality-assurance.html">Quality Assurance</a></li>
           </ul>
         </div>
