use common stylesheet for static pages styling

--- a/quality-assurance.html
+++ b/quality-assurance.html
@@ -6,7 +6,8 @@
     <title>Quality Assurance | Bastion Pacific</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/products.css">
-    <link rel="stylesheet" href="/css/quality-assurance.css">
+    <!-- <link rel="stylesheet" href="/css/quality-assurance.css"> -->
+    <link rel="stylesheet" href="/css/static-pages-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -328,7 +329,7 @@
   </header>
 
     <!-- Hero Section -->
-    <section class="hero-section">
+    <section class="hero-section quality-assurance-hero-section">
         <div class="hero-content">
             <h1 style="color: #ffffff;" class="hero-title">Quality | Bastion Pacific</h1>
             <nav class="breadcrumb">
