--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <title>Who Are We? | Bastion Pacific</title>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <!-- <link rel="stylesheet" href="/css/about.css"> -->
+    <link rel="stylesheet" href="/css/static-pages-style.css">
 </head>
 <body>
   <!-- Top Bar -->
