--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,8 @@
     <title>Privacy Policy | Bastion Pacific</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/products.css">
-    <link rel="stylesheet" href="/css/privacy-policy.css">
+    <!-- <link rel="stylesheet" href="/css/privacy-policy.css"> -->
+    <link rel="stylesheet" href="/css/static-pages-style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
