--- a/quality-assurance.html
+++ b/quality-assurance.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/products.css">
     <!-- <link rel="stylesheet" href="/css/quality-assurance.css"> -->
-    <link rel="stylesheet" href="/css/static-pages-style.css">
+    <link rel="stylesheet" href="/css/common/static-pages.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
