--- a/product-detail.html
+++ b/product-detail.html
@@ -15,7 +15,8 @@
     
     <!-- Styles -->
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/product-detail.css">
+    <link rel="stylesheet" href="/css/common/products.css">
+   <!-- <link rel="stylesheet" href="/css/product-detail.css"> -->
 </head>
 <body>
   <!-- Top Bar -->
@@ -334,8 +335,8 @@
     </div>
   </header>
     <!-- Breadcrumb -->
-    <div class="breadcrumb">
-        <div class="container">
+    <div class="pd-breadcrumb">
+        <div class="pd-container">
             <a href="#">Home</a>
             <span class="separator">›</span>
             <span>HEAVY DUTY WIPES - ROLLS</span>
@@ -344,7 +345,7 @@
 
     <!-- Product Section -->
     <section class="product-section">
-        <div class="container">
+        <div class="pd-container">
             <div class="product-grid">
                 <!-- Left: Image Gallery -->
                 <div class="product-gallery">
@@ -377,7 +378,7 @@
 
                 <!-- Right: Product Info -->
                 <div class="product-info">
-                    <h1 class="product-title">HEAVY DUTY WIPES - ROLLS</h1>
+                    <h1 class="product-detail-title">HEAVY DUTY WIPES - ROLLS</h1>
 
                     <!-- Color Selection -->
                     <div class="option-group">
@@ -432,7 +433,7 @@
 
     <!-- Product Table -->
     <section class="product-table-section">
-        <div class="container">
+        <div class="pd-container">
             <table class="product-table">
                 <thead>
                     <tr>
@@ -542,7 +543,7 @@
 
     <!-- Description Section -->
     <section class="description-section">
-        <div class="container">
+        <div class="pd-container">
             <div class="section-header">
                 <div class="section-header-title">Description</div>
                 <div class="section-divider"></div>
@@ -564,7 +565,7 @@
 
     <!-- Download Section -->
     <section class="download-section">
-        <div class="container">
+        <div class="pd-container">
             <div class="section-header">
                 <div class="section-header-title">Download</div>
                 <div class="section-divider"></div>
@@ -580,7 +581,7 @@
 
     <!-- Ratings & Reviews Section -->
     <section class="reviews-section">
-        <div class="container">
+        <div class="pd-container">
             <h2 class="reviews-heading">Ratings & Reviews</h2>
             <p class="no-reviews-text">No reviews available</p>
             <div class="write-review-section">
