--- a/products.html
+++ b/products.html
@@ -21,8 +21,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">  
   <!-- Styles -->
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="stylesheet" href="/css/products.css">
-  <link rel="stylesheet" href="/css/product-subcategory.css">
+  <link rel="stylesheet" href="/css/common/products.css">
+  <!-- <link rel="stylesheet" href="/css/products.css">-->
 </head>
 <body>
   <!-- Top Bar -->
@@ -342,13 +342,13 @@
   </header>
 
     <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="hero-content">
-            <h1 class="hero-title">Products</h1>
-            <nav class="breadcrumb">
+    <section class="product-hero-section">
+        <div class="product-hero-content">
+            <h1 class="product-hero-title">Products</h1>
+            <nav class="product-breadcrumb">
                 <a href="/">Home</a>
-                <span class="breadcrumb-separator">›</span>
-                <span class="breadcrumb-current">Products</span>
+                <span class="product-breadcrumb-separator">›</span>
+                <span class="product-breadcrumb-current">Products</span>
             </nav>
         </div>
     </section>
