--- a/quality-assurance.html
+++ b/quality-assurance.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quality Assurance | Bastion Pacific</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/products.css">
-    <!-- <link rel="stylesheet" href="/css/quality-assurance.css"> -->
     <link rel="stylesheet" href="/css/common/static-pages.css">
+    <!-- <link rel="stylesheet" href="/css/quality-assurance.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -329,13 +328,13 @@
   </header>
 
     <!-- Hero Section -->
-    <section class="hero-section quality-assurance-hero-section">
-        <div class="hero-content">
-            <h1 style="color: #ffffff;" class="hero-title">Quality | Bastion Pacific</h1>
-            <nav class="breadcrumb">
+    <section class="static-hero-section quality-assurance-hero-section">
+        <div class="static-hero-content">
+            <h1 style="color: #ffffff;" class="static-hero-title">Quality | Bastion Pacific</h1>
+            <nav class="static-breadcrumb">
                 <a href="/">Home</a>
-                <span class="breadcrumb-separator">›</span>
-                <span class="breadcrumb-current">Quality Assurance</span>
+                <span class="static-breadcrumb-separator">›</span>
+                <span class="static-breadcrumb-current">Quality Assurance</span>
             </nav>
         </div>
     </section>
