added login unavailable

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <span>sales@bastionpacific.com.au</span>
           </a>
         </div>
-        <a href="#" class="contact-link">
+        <a href="/login-unavailable.html" class="contact-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg>
             <span>Distributor Sign-In</span>
           </a>
@@ -522,7 +522,7 @@
             <li><a href="/cookies-policy.html">Cookies Policy</a></li>
             <li><a href="/privacy-policy.html">Privacy Policy</a></li>
             <li><a href="/online-conditions-of-sale.html">Online Conditions of Sale</a></li>
-            <li><a href="#">My Account</a></li>
+            <li><a href="/login-unavailable.html">My Account</a></li>
           </ul>
         </div>
         <div class="footer-col">
